# tribune

./: .eslintrc.cjs  .gitignore  .prettierrc.yaml  .tribuneignore  Cargo.toml  Makefile  README.md  about.html  blog.html  dev-app-update.yml  download.html  electron-builder.yml  electron.vite.config.ts  guide.html  guide.md  index.html  load.js  package-lock.json  package.json  preload.js  rss.xml  spec.md  style.css  tailwind.config.js  tribuneconfig.json  tsconfig.web.json
.tribune/: about.html  blog.html  index.html
.tribune/widgets/: test-widget.html
adjusted/: art.html  blorbos.html  index.html  reviews.html  style.css
adjusted/posts/: her-review.md
adjusted/templates/: default.html
adjusted/widgets/: nav-bar.html
posts/: test.md  test1.md  test2.md
resources/: default.css
sandbox/appData/Testy Test/: about.html  index.html
sandbox/sites/Testy Test/: index.html
src/: error.rs  lib.rs  main.rs  markdown.rs  posts.rs  site.rs  widgets.rs
src/main/: index.ts  posts.ts  refs.ts  server.ts  sites.ts  widgets.ts
src/main/scripts/: autoReload.ts  broadcastStyle.ts
src/preload/: api.ts  index.d.ts  index.ts
src/renderer/: index.html  style.css  style.scss
src/renderer/src/: App.lib.ts  App.tsx  dummy.ts  global.ts  lib.ts  main.tsx  (+2 more)
src/shared/: index.ts  lib.ts  schemas.ts  types.ts
styles/: blog.css  core.css  docs.css  download.css  index.css
templates/: default.html  docs.html  post.html
types/: index.ts  package-lock.json  package.json  tsconfig.json
widgets/: another-test.html  nav-bar.html  one-word.html  test-widget.html
(+44 files in other folders)
