[package]
name = "tribune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
devserver_lib = {version = "0.4.2", features = ["reload"]}
filetime = "0.2.23"
gray_matter = "0.2.8"
markdown = "0.3.0"
notify = { version = "6.1.1", features = ["serde"] }
open = "5.3.0"
pathdiff = "0.2.1"
scraper = "0.19.0"
serde = "1.0.204"
serde_json = "1.0.120"
