[package]
name = "tribune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
devserver_lib = {version = "0.4.2", features = ["reload"]}
gray_matter = "0.2.8"
html_editor = "0.7.0"
markdown = "0.3.0"
notify = { version = "6.1.1", features = ["serde"] }
open = "5.3.0"
pathdiff = "0.2.1"
rss = "2.0.8"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.63"
walkdir = "2.5.0"
